<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>maliput_dragway</name>
  <version>0.1.5</version>
  <description>Maliput Dragway.</description>
  <maintainer email="daniel.stonier@tri.global">Daniel Stonier</maintainer>
  <license file="LICENSE">BSD Clause 3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <doc_depend>ament_cmake_doxygen</doc_depend>

  <depend>maliput</depend>
  <depend>maliput_py</depend>
  <depend>pybind11-dev</depend>
  <depend>python3-dev</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
